--- a/index.html
+++ b/index.html
@@ -1,23 +1,111 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>remote.ly | Sign Up For Your Free Trial Today!</title>
 
     <!-- Website & Author Information -->
-    <meta name="author" content="...">
-    <meta name="description" content="This lab demonstrates a responsive web signup form for a fictitious tech startup.">
+    <meta name="author" content="..." />
+    <meta
+      name="description"
+      content="This lab demonstrates a responsive web signup form for a fictitious tech startup."
+    />
 
     <!-- Google Fonts -->
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-	<link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@300&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@300&display=swap"
+      rel="stylesheet"
+    />
 
     <!-- Stylesheets -->
-    <link rel="stylesheet" href="css/reset.css">
-    <link rel="stylesheet" href="css/styles.css">
-</head>
-<body>
+    <link rel="stylesheet" href="css/reset.css" />
+    <link rel="stylesheet" href="css/styles.css" />
+  </head>
+  <body>
+    <header>
+      <div>
+        <img
+          src="/img/work-at-home-with-pets.webp"
+          alt="work at home with pets"
+        />
+      </div>
+      <div class="header-content">
+        <h1>Make every day 'bring your pet to work' day</h1>
+        <p>
+          Our award winning platform lets you take your work on the go, wherever
+          life may lead you. Sign up no to securely connect to clients, no
+          matter where you are.
+        </p>
+      </div>
+    </header>
+    <main>
+      <div class="form-wrapper">
+        <div class="form-header">
+          <p>Try it Free for 7 days, with plans starting at $25/month.</p>
+        </div>
+        <div class="form-container">
+          <form action="submit">
+            <div class="form-content-wrapper">
+              <section>
+                <h2>Your Account</h2>
 
-</body>
+                <div class="form-field-group">
+                  <label for="username">Username</label>
+                  <input type="text" id="username" />
+                </div>
+                <div class="form-field-group">
+                  <label for="email">Email ddress</label>
+                  <input type="text" id="email" />
+                </div>
+                <div class="form-field-group">
+                  <label for="password">Password</label>
+                  <input type="text" id="password" />
+                </div>
+                <div class="form-field-group">
+                  <label for="password-again">Password (Again)</label>
+                  <input type="text" id="password-again" />
+                  <p>
+                    Your password must contain at least one uppercase letter,
+                    one lowercase letter, and one number.
+                  </p>
+                </div>
+              </section>
+              <section>
+                <h2>All About You</h2>
+
+                <div class="form-field-group">
+                  <label for="first-name">First Name</label>
+                  <input type="text" />
+                </div>
+                <div class="form-field-group">
+                  <label for="Last-name">Last Name</label>
+                  <input type="text" />
+                </div>
+                <div class="form-field-group">
+                  <label for="date">Date of Birth</label>
+                  <input type="date" />
+                </div>
+                <div class="form-field-group">
+                  <label for="business-type">Business type</label>
+                  <select name="" id="">
+                    <option>Sole Proprietorship</option>
+                    <option>Non-Sole Proprietorship</option>
+                  </select>
+                </div>
+              </section>
+
+              <div>
+                <button>Claim Your Free Trial</button>
+              </div>
+            </div>
+          </form>
+        </div>
+      </div>
+    </main>
+    <footer>
+      <p>Allfkn rights reserved</p>
+    </footer>
+  </body>
 </html>
