--- a/index.html
+++ b/index.html
@@ -54,57 +54,66 @@
             <div class="form-content-wrapper">
               <section>
                 <h2>Your Account</h2>
+                <div class="form-column">
+                  <div class="form-field-group">
+                    <label for="username">Username</label>
+                    <input type="text" id="username" />
+                  </div>
+                  <div class="form-field-group">
+                    <label for="email">Email ddress</label>
+                    <input type="email" id="email" />
+                  </div>
+                </div>
+                <div class="form-column">
+                  <div class="form-field-group">
+                    <label for="password">Password</label>
+                    <input type="password" id="password" />
+                    <p>
+                      Your password must contain at least one uppercase letter,
+                      one lowercase letter, and one number.
+                    </p>
+                  </div>
 
-                <div class="form-field-group">
-                  <label for="username">Username</label>
-                  <input type="text" id="username" />
-                </div>
-                <div class="form-field-group">
-                  <label for="email">Email ddress</label>
-                  <input type="email" id="email" />
-                </div>
-                <div class="form-field-group">
-                  <label for="password">Password</label>
-                  <input type="password" id="password" />
-                </div>
-                <div class="form-field-group">
-                  <label for="password-again">Password (Again)</label>
-                  <input type="text" id="password-again" />
-                  <p>
-                    Your password must contain at least one uppercase letter,
-                    one lowercase letter, and one number.
-                  </p>
+                  <div class="form-field-group">
+                    <label for="password-again">Password (Again)</label>
+                    <input type="text" id="password-again" />
+                  </div>
                 </div>
               </section>
               <section>
                 <h2>All About You</h2>
 
-                <div class="form-field-group">
-                  <label for="first-name">First Name</label>
-                  <input type="text" />
+                <div class="form-column">
+                  <div class="form-field-group">
+                    <label for="first-name">First Name</label>
+                    <input type="text" />
+                  </div>
+                  <div class="form-field-group">
+                    <label for="Last-name">Last Name</label>
+                    <input type="text" />
+                  </div>
                 </div>
-                <div class="form-field-group">
-                  <label for="Last-name">Last Name</label>
-                  <input type="text" />
-                </div>
-                <div class="form-field-group">
-                  <label for="date">Date of Birth</label>
-                  <input type="date" />
-                </div>
-                <div class="form-field-group">
-                  <label for="business-type">Business type</label>
-                  <select name="proprietorship" id="proprietorship">
-                    <option>Sole Proprietorship</option>
-                    <option>Non-Sole Proprietorship</option>
-                  </select>
+                <div class="form-column">
+                  <div class="form-field-group">
+                    <label for="date">Date of Birth</label>
+                    <input type="date" />
+                  </div>
+                  <div class="form-field-group">
+                    <label for="business-type">Business type</label>
+                    <select name="proprietorship" id="proprietorship">
+                      <option>Sole Proprietorship</option>
+                      <option>Non-Sole Proprietorship</option>
+                    </select>
+                  </div>
                 </div>
                 <div class="btn-container">
-                  <button class="btn">Claim Your Free Trial</button>
+                  <button class="btn">Claim Your Free Trial ></button>
                 </div>
                 <div class="disclaimer">
                   <p>
-                    By signing up, you agree to our Terms of Service and Privacy
-                    Policy.
+                    By signing up, you agree to our
+                    <a href="#">Terms of Service</a> and
+                    <a href="#">Privacy Policy</a>.
                   </p>
                 </div>
               </section>
