--- a/index.html
+++ b/index.html
@@ -25,102 +25,101 @@
   </head>
   <body>
     <div class="image-container">
-      <img
-        src="/img/work-at-home-with-pets.webp"
-        alt="work at home with pets"
-      />
+      <img src="img/work-at-home-with-pets.webp" alt="work at home with pets" />
     </div>
-    <header>
-      <div class="header-logo">
-        <img src="/img/logo.svg" alt="logo" />
-        <p>remote.ly</p>
-      </div>
-      <div class="header-content">
-        <h1>Make every day 'bring your pet to work' day</h1>
-        <p>
-          Our award winning platform lets you take your work on the go, wherever
-          life may lead you. Sign up no to securely connect to clients, no
-          matter where you are.
-        </p>
-      </div>
-    </header>
-    <main>
-      <div class="form-wrapper">
-        <div class="form-header">
-          <p>Try it Free for 7 days, with plans starting at $25/month.</p>
+    <div class="content">
+      <header>
+        <div class="header-logo">
+          <img src="img/logo.svg" alt="logo" />
+          <p>remote.ly</p>
         </div>
-        <div class="form-container">
-          <form action="submit">
-            <div class="form-content-wrapper">
-              <section>
-                <h2>Your Account</h2>
-                <div class="form-column">
-                  <div class="form-field-group">
-                    <label for="username">Username</label>
-                    <input type="text" id="username" />
+        <div class="header-content">
+          <h1>Make every day 'bring your pet to work' day</h1>
+          <p>
+            Our award winning platform lets you take your work on the go,
+            wherever life may lead you. Sign up no to securely connect to
+            clients, no matter where you are.
+          </p>
+        </div>
+      </header>
+      <main>
+        <div class="form-wrapper">
+          <div class="form-header">
+            <p>Try it Free for 7 days, with plans starting at $25/month.</p>
+          </div>
+          <div class="form-container">
+            <form action="submit">
+              <div class="form-content-wrapper">
+                <section>
+                  <h2>Your Account</h2>
+                  <div class="form-column">
+                    <div class="form-field-group">
+                      <label for="username">Username</label>
+                      <input type="text" id="username" />
+                    </div>
+                    <div class="form-field-group">
+                      <label for="email">Email ddress</label>
+                      <input type="email" id="email" />
+                    </div>
                   </div>
-                  <div class="form-field-group">
-                    <label for="email">Email ddress</label>
-                    <input type="email" id="email" />
+                  <div class="form-column">
+                    <div class="form-field-group">
+                      <label for="password">Password</label>
+                      <input type="password" id="password" />
+                      <p>
+                        Your password must contain at least one uppercase
+                        letter, one lowercase letter, and one number.
+                      </p>
+                    </div>
+
+                    <div class="form-field-group">
+                      <label for="password-again">Password (Again)</label>
+                      <input type="text" id="password-again" />
+                    </div>
                   </div>
-                </div>
-                <div class="form-column">
-                  <div class="form-field-group">
-                    <label for="password">Password</label>
-                    <input type="password" id="password" />
+                </section>
+                <section>
+                  <h2>All About You</h2>
+
+                  <div class="form-column">
+                    <div class="form-field-group">
+                      <label for="first-name">First Name</label>
+                      <input type="text" />
+                    </div>
+                    <div class="form-field-group">
+                      <label for="Last-name">Last Name</label>
+                      <input type="text" />
+                    </div>
+                  </div>
+                  <div class="form-column">
+                    <div class="form-field-group">
+                      <label for="date">Date of Birth</label>
+                      <input type="date" />
+                    </div>
+                    <div class="form-field-group">
+                      <label for="business-type">Business type</label>
+                      <select name="proprietorship" id="proprietorship">
+                        <option>Sole Proprietorship</option>
+                        <option>Non-Sole Proprietorship</option>
+                      </select>
+                    </div>
+                  </div>
+                  <div class="btn-container">
+                    <button class="btn">Claim Your Free Trial ></button>
+                  </div>
+                  <div class="disclaimer">
                     <p>
-                      Your password must contain at least one uppercase letter,
-                      one lowercase letter, and one number.
+                      By signing up, you agree to our
+                      <a href="#">Terms of Service</a> and
+                      <a href="#">Privacy Policy</a>.
                     </p>
                   </div>
-
-                  <div class="form-field-group">
-                    <label for="password-again">Password (Again)</label>
-                    <input type="text" id="password-again" />
-                  </div>
-                </div>
-              </section>
-              <section>
-                <h2>All About You</h2>
-
-                <div class="form-column">
-                  <div class="form-field-group">
-                    <label for="first-name">First Name</label>
-                    <input type="text" />
-                  </div>
-                  <div class="form-field-group">
-                    <label for="Last-name">Last Name</label>
-                    <input type="text" />
-                  </div>
-                </div>
-                <div class="form-column">
-                  <div class="form-field-group">
-                    <label for="date">Date of Birth</label>
-                    <input type="date" />
-                  </div>
-                  <div class="form-field-group">
-                    <label for="business-type">Business type</label>
-                    <select name="proprietorship" id="proprietorship">
-                      <option>Sole Proprietorship</option>
-                      <option>Non-Sole Proprietorship</option>
-                    </select>
-                  </div>
-                </div>
-                <div class="btn-container">
-                  <button class="btn">Claim Your Free Trial ></button>
-                </div>
-                <div class="disclaimer">
-                  <p>
-                    By signing up, you agree to our
-                    <a href="#">Terms of Service</a> and
-                    <a href="#">Privacy Policy</a>.
-                  </p>
-                </div>
-              </section>
-            </div>
-          </form>
+                </section>
+              </div>
+            </form>
+          </div>
         </div>
-      </div>
-    </main>
+      </main>
+    </div>
   </body>
 </html>
